server/compilers/goLiteJS/src/test/ml1/valid/var2.go
// all supported short variable declarations
package main

func main() {
    x, y := 23, 23

    if x := 0; x < 1 {

    } else if y :=0; y < 1 {

    } else {

    }

    for b:=0; b < 10; b++ {

    }

    switch x := 0; {
    default:
    }

}
