server/compilers/goLiteJS/src/test/ml1/invalid/shortdecl7.go
// extra commas
package main

func main(){
    x, y, := 1, 2, 3
}
